--- a/index.html
+++ b/index.html
@@ -1,53 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Второй сайт</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img src="martynuk_kot_begemot_2_thumb.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                  </div>
+        <div class="card">
+            <div class="photo">
+                <img src="martynuk_kot_begemot_thumb.jpg">
+            </div>
+            <div class="info">
+                <h1>Кот Бегемот</h1>
+                <p>Кот Бегемот — персонаж романа «Мастер и Маргарита», кот-оборотень и любимый шут Воланда. Знаменит своими словами, сказанными чекистам (сотрудникам НКВД), явившимся, чтобы арестовать «фокусников»(Воланда и его свиту — они понятия не имели о том, с кем имеют дело) в Москве в «нехорошей квартире» по адресу Большая Садовая, 302-бис, кв. № 50: "Не шалю, никого не трогаю, починяю примус…","Единственно, что может спасти смертельно раненного кота, — это глоток бензина…"</p>
+            </div>
+                <div class="user_info">
+                    <p1>ФИО:Бегемот Котович Оборотнев<br />
+                    Год рождения: 1929<br />
+                    e-mail: <a href="mailto:cat_test@gmail.com" class="email">cat_test@gmail.com</a><br />cat_test@gmail.com<br />
+                    Город: Россия, Москва</p1>
                 </div>
-            </div>
-             <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img src="the-master-and-margarita-abdulov-as-koroviev_65.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card" style="width: 18rem;">
-                  <img src="a86c93e15fd4d01ca4af8bc719745163.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                  </div>
-                </div>
-            </div>
-
-            </div>
         </div>
-
+        <div class="card">
+            <div class="photo">
+                <img src="the-master-and-margarita-abdulov-as-koroviev_65.jpg">
+            </div>
+            <div class="info">
+                <h1>Фагот-Коровьев</h1>
+                <p>Фаго́т — персонаж романа «Мастер и Маргарита», рыцарь, член свиты Воланда. В Москве 30-х годов был известен под фамилией Коро́вьев, представлялся то бывшим регентом, то переводчиком при знатном иностранце. …прозрачный гражданин престранного вида. На маленькой головке жокейский картузик, клетчатый кургузый воздушный… пиджачок… гражданин ростом в сажень, но в плечах узок, худ неимоверно, и физиономия, прошу заметить, глумливая…</p>
+            </div>
+                <div class="user_info">
+                    <p1>ФИО:Фагот Коровьев<br />
+                    Год рождения: 1929<br />
+                    e-mail: <a href="mailto:fagot_test@gmail.com" class="email">fagot_test@gmail.com</a><br />fagot_test@gmail.com<br />
+                    Город: Россия, Москва</p1>
+                </div>
+        </div>
+         <div class="card">
+            <div class="photo">
+                <img src="a86c93e15fd4d01ca4af8bc719745163.jpg">
+            </div>
+             <div class="info">
+                 <h1>Азазелло</h1>
+                 <p>Прямо из зеркала трюмо вышел маленький, но необыкновенно широкоплечий, в котелке на голове и с торчащим изо рта клыком, безобразящим и без того невиданно мерзкую физиономию. И при этом ещё огненно-рыжий.</p>
+             </div>
+                 <div class="user_info">
+                    <p1>ФИО:Азазелло Демонов<br />
+                    Год рождения: 1929<br />
+                    e-mail: <a href="mailto:azazel_test@gmail.com" class="email">azazel_test@gmail.com</a><br />
+                    Город: Россия, Москва</p1>
+                 </div>
+        </div>
     </div>
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
